--- a/app.html
+++ b/app.html
@@ -1,192 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<title>Field Visit App</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<style>
-body{margin:0;font-family:Arial;background:#f4f6f8}
-.hidden{display:none}
-
-/* LAYOUT */
-.app{display:flex;height:100vh}
-.sidebar{
-  width:230px;
-  background:#1f3a5f;
-  color:#fff;
-}
-.sidebar h2{
-  text-align:center;
-  padding:15px 0;
-  margin:0;
-  border-bottom:1px solid #16304f;
-}
-.sidebar button{
-  width:100%;
-  padding:12px;
-  border:none;
-  background:none;
-  color:#fff;
-  text-align:left;
-}
-.sidebar button:hover{background:#16304f}
-
-.main{flex:1;padding:20px;overflow:auto}
-.section{display:none}
-.section.active{display:block}
-.container{background:#fff;padding:20px;border-radius:8px}
-
-.kpi-wrap{display:grid;grid-template-columns:repeat(2,1fr);gap:10px}
-.kpi{background:#eef2f7;padding:15px;border-radius:6px;text-align:center}
-
-input,select,textarea,button{
-  width:100%;
-  padding:8px;
-  margin-top:6px;
-}
-textarea{min-height:60px}
-button.primary{background:#1f3a5f;color:#fff;border:none}
-
-table{width:100%;border-collapse:collapse;margin-top:10px;font-size:13px}
-th,td{border:1px solid #ccc;padding:6px}
-th{background:#eef2f7}
-</style>
-</head>
-
+<html>
 <body>
-
-<div class="app">
-
-  <!-- SIDEBAR -->
-  <div class="sidebar">
-    <h2>Field Visit</h2>
-    <button id="mDash" onclick="show('dashboard')">📊 Dashboard</button>
-    <button id="mVisit" onclick="show('visits')">📝 Visits</button>
-    <button id="mReport" onclick="show('reports')">📑 Reports</button>
-    <button id="mUsers" onclick="show('users')">👥 Users</button>
-    <button id="mSet" onclick="show('settings')">⚙️ Settings</button>
-    <button onclick="logout()">🚪 Logout</button>
-  </div>
-
-  <!-- MAIN -->
-  <div class="main">
-
-    <!-- DASHBOARD -->
-    <div id="dashboard" class="section">
-      <div class="container">
-        <h3>Dashboard</h3>
-        <div class="kpi-wrap">
-          <div class="kpi">Today<br><b id="k1">0</b></div>
-          <div class="kpi">Month<br><b id="k2">0</b></div>
-          <div class="kpi">Pending<br><b id="k3">0</b></div>
-          <div class="kpi">Users<br><b id="k4">0</b></div>
-        </div>
-      </div>
-    </div>
-
-    <!-- VISITS -->
-    <div id="visits" class="section">
-      <div class="container">
-        <h3>Visit Entry</h3>
-        <input id="vClient" placeholder="Client Name">
-        <input id="vLoc" placeholder="Location">
-        <textarea id="vSum" placeholder="Discussion Summary"></textarea>
-        <select id="vStatus">
-          <option>Pending</option>
-          <option>Completed</option>
-        </select>
-        <button class="primary" onclick="addVisit()">Submit Visit</button>
-      </div>
-    </div>
-
-    <!-- REPORTS -->
-    <div id="reports" class="section">
-      <div class="container">
-        <h3>Reports</h3>
-        <p>
-          ✔ BDO / ABDM → own report only<br>
-          ✔ SR_ABDM / GM / ADMIN → full report
-        </p>
-      </div>
-    </div>
-
-    <!-- USERS -->
-    <div id="users" class="section">
-      <div class="container">
-        <h3>User Management (Admin)</h3>
-        <p>Create / Edit / Activate users</p>
-      </div>
-    </div>
-
-    <!-- SETTINGS -->
-    <div id="settings" class="section">
-      <div class="container">
-        <h3>Settings</h3>
-        <p>Password reset</p>
-      </div>
-    </div>
-
-  </div>
-</div>
-
 <script>
-const API="https://script.google.com/macros/s/AKfycbxn6EmnZRtG64OVYpuRPguTmcre7-p8kRMd52m253fstIhnmyi-YUZUO6ClvUsDM7CC2A/exec";
-const user=JSON.parse(localStorage.getItem("user"));
-if(!user) window.location.href="index.html";
-
-/* ROLE BASED MENU */
-if(user.role==="BDO"||user.role==="ABDM"){
-  mDash.style.display="none";
-  mReport.style.display="none";
-  mUsers.style.display="none";
-  mSet.style.display="none";
-}
-if(user.role==="GM"){
-  mVisit.style.display="none";
-  mUsers.style.display="none";
-}
-if(user.role==="SR_ABDM"){
-  mUsers.style.display="none";
-}
-
-/* DEFAULT PAGE */
-show(user.role==="BDO"||user.role==="ABDM"?"visits":"dashboard");
-
-/* NAV */
-function show(id){
-  document.querySelectorAll(".section").forEach(s=>s.classList.remove("active"));
-  document.getElementById(id).classList.add("active");
-}
-
-/* LOGOUT */
-function logout(){
-  localStorage.clear();
-  window.location.href="index.html";
-}
-
-/* VISIT WITH GPS */
-function addVisit(){
-  navigator.geolocation.getCurrentPosition(p=>{
-    fetch(API,{
-      method:"POST",
-      body:JSON.stringify({
-        action:"addVisit",
-        user_id:user.user_id,
-        user_name:user.user_name,
-        client_name:vClient.value,
-        location:vLoc.value,
-        discussion_summary:vSum.value,
-        status:vStatus.value,
-        lat:p.coords.latitude,
-        lng:p.coords.longitude
-      })
-    })
-    .then(r=>r.json())
-    .then(d=>alert(d.success?"Visit saved":"Error"));
-  },()=>alert("GPS permission required"));
-}
+const API="https://script.google.com/macros/s/AKfycbzE6y_ZaPzxDspQRSLcawoAHNopy18W1bCu8Eh6MReB_bxZD6phDh3ZcbVcXYAZhl7tjA/exec";
+const u=JSON.parse(localStorage.getItem("u"));
+if(!u)location="index.html";
 </script>
 
+<h2 id="title"></h2>
+<button onclick="sec('dash')">Dashboard</button>
+<button onclick="sec('visit')">Visits</button>
+<button onclick="sec('rep')">Reports</button>
+<button onclick="sec('usr')">Users</button>
+<button onclick="sec('set')">Settings</button>
+<button onclick="logout()">Logout</button>
+
+<div id="dash"></div>
+<div id="visit"></div>
+<div id="rep"></div>
+<div id="usr"></div>
+<div id="set"></div>
+
+<script>
+title.innerText=u.role+" – "+u.user_name;
+
+function sec(id){
+["dash","visit","rep","usr","set"].forEach(x=>document.getElementById(x).innerHTML="");
+if(id=="dash")dash();
+if(id=="visit")visit();
+if(id=="rep")report();
+if(id=="usr"&&u.role=="ADMIN")users();
+if(id=="set")settings();
+}
+
+function dash(){
+fetch(API,{method:"POST",body:JSON.stringify({action:"getDashboard",role:u.role,user_id:u.user_id})})
+.then(r=>r.json()).then(d=>{
+dash.innerHTML=`Today:${d.today} Month:${d.month} Pending:${d.pending} Users:${d.users}`;
+});
+}
+
+function visit(){
+visit.innerHTML=`
+<input id=c placeholder=Client>
+<input id=l placeholder=Location>
+<textarea id=s></textarea>
+<select id=st><option>Pending</option><option>Completed</option></select>
+<button onclick=sv()>Save</button>`;
+}
+
+function sv(){
+navigator.geolocation.getCurrentPosition(p=>{
+fetch(API,{method:"POST",body:JSON.stringify({
+action:"addVisit",user_id:u.user_id,user_name:u.user_name,
+client:c.value,location:l.value,summary:s.value,status:st.value,
+lat:p.coords.latitude,lng:p.coords.longitude
+})}).then(()=>alert("Saved"));
+});
+}
+
+function report(){
+rep.innerHTML=`<input id=f type=date><input id=t type=date>
+<button onclick=gr()>Generate</button><table id=rt></table>`;
+}
+
+function gr(){
+fetch(API,{method:"POST",body:JSON.stringify({
+action:"getReport",role:u.role,user_id:u.user_id,from:f.value,to:t.value
+})}).then(r=>r.json()).then(d=>{
+rt.innerHTML=d.data.map(x=>`<tr><td>${x.date}</td><td>${x.user}</td><td>${x.client}</td><td>${x.status}</td></tr>`).join("");
+});
+}
+
+function users(){
+fetch(API,{method:"POST",body:JSON.stringify({action:"getUsers",role:u.role})})
+.then(r=>r.json()).then(d=>{
+usr.innerHTML=d.users.map(x=>`${x.name} ${x.role} ${x.status}<br>`).join("");
+});
+}
+
+function settings(){
+set.innerHTML=`<input id=np placeholder="New Password">
+<button onclick=rp()>Reset</button>`;
+}
+
+function rp(){
+fetch(API,{method:"POST",body:JSON.stringify({
+action:"resetPassword",user_id:u.user_id,target:u.user_id,password:np.value,role:u.role
+})}).then(()=>alert("Changed"));
+}
+
+function logout(){localStorage.clear();location="index.html";}
+sec(u.role=="BDO"||u.role=="ABDM"?"visit":"dash");
+</script>
 </body>
 </html>
