--- a/index.html
+++ b/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Admin Login</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+body{
+  height:100vh;display:flex;justify-content:center;align-items:center;
+  background:#1f3a5f;font-family:Arial
+}
+.box{background:#fff;padding:25px;width:300px;border-radius:8px}
+input,button{width:100%;padding:10px;margin-top:10px}
+button{background:#1f3a5f;color:#fff;border:none}
+</style>
+</head>
 <body>
-<h3>Login</h3>
-<input id="m" placeholder="Mobile">
-<input id="p" type="password" placeholder="Password">
-<button onclick="l()">Login</button>
+
+<div class="box">
+  <h3>Admin Login</h3>
+  <input id="mobile" placeholder="Mobile">
+  <input id="password" type="password" placeholder="Password">
+  <button onclick="login()">Login</button>
+</div>
 
 <script>
-const API="https://script.google.com/macros/s/AKfycbzE6y_ZaPzxDspQRSLcawoAHNopy18W1bCu8Eh6MReB_bxZD6phDh3ZcbVcXYAZhl7tjA/exec";
-function l(){
-fetch(API,{method:"POST",body:JSON.stringify({action:"login",mobile:m.value,password:p.value})})
-.then(r=>r.json()).then(d=>{
-if(!d.success)return alert("Invalid");
-localStorage.setItem("u",JSON.stringify(d));
-location="app.html";
-});
+const API="https://script.google.com/macros/s/AKfycbxp58RS5Hmsi73MBTRds_MNxAgfBkex0IkoFDzVwGEqQvjL99j33aQXdWXO69889WhV5w/exec";
+
+function login(){
+  fetch(API,{
+    method:"POST",
+    body:JSON.stringify({
+      action:"login",
+      mobile:mobile.value,
+      password:password.value
+    })
+  })
+  .then(r=>r.json())
+  .then(d=>{
+    if(!d.success){alert("Invalid login");return;}
+    if(d.role!=="ADMIN"){alert("Not admin");return;}
+    localStorage.setItem("admin",JSON.stringify(d));
+    location.href="admin.html";
+  });
 }
 </script>
+
 </body>
 </html>
